syntax = "proto3";

option csharp_namespace = "BlogCommentService";

package blogcomment;

service CommentService {
	rpc AnalyzeComment (CommentRequest) returns (CommentResponse);
}

message CommentRequest {
	string comment = 1;
}

message CommentResponse {
	string sentiment = 1;
	float score = 2;
}
